Fix deprecations in Java 9